fix z-index issue with about content

--- a/src/App.css
+++ b/src/App.css
@@ -22,18 +22,21 @@
   background-image: url('https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg');
   background-size: 100% 100%;
   background-position: center;
-  filter: brightness(0.8);
+  filter: brightness(0.5);
 }
+
 .content {
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   width: 100vw;
- top: 100px;
+  top: 0;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
   gap: 20px;
+  z-index: 1;
 }
 
 .landing_content {
